fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,7 @@
   scroll-behavior: smooth;
   scroll-margin-top: 14vh;
 }
+
+main {
+  overflow-x: hidden;
+}
